<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="40dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="67dp"
                android:layout_height="83dp"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:srcCompat="@drawable/bird" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="67dp"
                android:layout_height="83dp"
                card_view:layout_constraintStart_toEndOf="@+id/imageView"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:srcCompat="@drawable/bird" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="67dp"
                android:layout_height="83dp"
                card_view:layout_constraintStart_toEndOf="@+id/imageView2"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:srcCompat="@drawable/bird" />

            <TextView
                android:id="@+id/miseView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miseRes"
                android:textColor="@color/black"
                android:textSize="14sp"
                card_view:layout_constraintBottom_toTopOf="@+id/nouvSolde"
                card_view:layout_constraintStart_toStartOf="@+id/noOfGames"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nouvSolde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nouv_soldeRes"
                android:textColor="@color/black"

                android:textSize="14sp"
                card_view:layout_constraintStart_toEndOf="@+id/imageView3"
                card_view:layout_constraintStart_toStartOf="@+id/noOfGames"
                card_view:layout_constraintTop_toBottomOf="@id/miseView" />

            <TextView
                android:id="@+id/gainOuPerte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textColor="@color/black"

                android:textSize="14sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/miseView"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/noOfGames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:text="@string/noOfGames"
                android:textColor="@color/black"

                android:textSize="14sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/imageView3"
                card_view:layout_constraintTop_toBottomOf="@+id/nouvSolde" />

            <TextView
                android:id="@+id/numberId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"

                card_view:layout_constraintStart_toEndOf="@+id/noOfGames"
                card_view:layout_constraintTop_toTopOf="@+id/noOfGames" />

            <TextView
                android:id="@+id/modeLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modeGame"
                android:textColor="@color/black"
                card_view:layout_constraintStart_toStartOf="@+id/noOfGames"
                card_view:layout_constraintTop_toBottomOf="@+id/noOfGames" />

            <TextView
                android:id="@+id/dareId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/casseCou"
                android:textColor="@color/black"
                android:visibility="gone"
                card_view:layout_constraintBottom_toBottomOf="@+id/modeLbl"
                card_view:layout_constraintStart_toEndOf="@+id/modeLbl" />

            <TextView
                android:id="@+id/normalModeId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/normal"
                android:textColor="@color/black"
                android:visibility="gone"
                card_view:layout_constraintStart_toEndOf="@+id/modeLbl"
                card_view:layout_constraintTop_toBottomOf="@+id/noOfGames" />

            <TextView
                android:id="@+id/gainResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/gainRes"
                android:textColor="@color/black"
                android:visibility="gone"
                card_view:layout_constraintStart_toEndOf="@+id/miseView"
                card_view:layout_constraintTop_toTopOf="@+id/miseView" />

            <TextView
                android:id="@+id/lossResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perteRes"
                android:textColor="@color/black"
                android:visibility="gone"
                card_view:layout_constraintStart_toEndOf="@+id/miseView"
                card_view:layout_constraintTop_toTopOf="@+id/miseView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>